Resizing homepage now upscales content to be more readable. Fixed some issues with homepage HTML and CSS

--- a/src/_styles/home.scss
+++ b/src/_styles/home.scss
@@ -3,7 +3,8 @@
 #content {
     position: relative;
     overflow: hidden;
-    height: 100vw;
+    height: auto;
+    margin-bottom: 10%;
 }
 
 #home-background {
@@ -15,7 +16,7 @@
     object-fit: cover;
     background: white;
     opacity: 15%;
-    mask-image: linear-gradient(to bottom, transparent 0%, black 15%, black 70%, transparent 95%);
+    mask-image: linear-gradient(to bottom, transparent 0%, black 15%, black 55%, transparent 65%);
 }
 
 #circle {
@@ -33,10 +34,10 @@
 
 #headshot {
     position: absolute;
-    right: 7.5%;
-    top: 7.5%;
+    right: 10%;
+    top: 5%;
     border-radius: 50%;
-    height: 32.5%;
+    height: 20%;
     z-index: 3;
     filter: drop-shadow(0.2vw 0.2vw 0.2vw grey);
 }
@@ -44,7 +45,7 @@
 #header-text {
     position: absolute;
     width: 30%;
-    top: 25%;
+    top: 17.5%;
     left: 10%;
 }
 
@@ -73,7 +74,7 @@
 
 #about-me-header {
     position: absolute;
-    top: 49%;
+    top: 36%;
     left: 8%;
     color: $important-text-color;
     font-weight: bold;
@@ -150,10 +151,6 @@
     margin-top: 2%;
 }
 
-#additional-content {
-    height: 40vw;
-}
-
 #about-me-p3 {
     width: 80%;
     margin-left: 10%;
@@ -189,4 +186,57 @@
 
 .link:hover {
     color: $important-text-color;
+}
+
+@media (max-width: 1000px) {
+    #home-background {
+        top: 6%;
+        mask-image: linear-gradient(to bottom, transparent 0%, black 15%, black 45%, transparent 55%);
+    }
+    #circle {
+        right: -25%;
+        top: -20%;
+        width: 70%;
+    }
+    #headshot {
+        right: 10%;
+        top: 5%;
+        height: 16%;
+    }
+    #about-me-header {
+        top: 29%;
+    }
+
+    #background, #experience, #personal-life {
+        font-size: 2vw;
+    }
+    #about-me-p1, #about-me-p2, #about-me-p3, #about-me-p4, #about-me-p5 {
+        font-size: 1.5vw;
+    }
+
+    #minecraft-mod {
+        width: 30%;
+        margin-left: 12%;
+        border: 0.3vw solid $important-text-color;
+        filter: drop-shadow(0.4vw 0.4vw 0.4vw grey);
+    }
+
+    #mod-caption {
+        margin-left: 16%;
+        margin-top: 43%;
+        font-size: 1vw;
+    }
+
+    #revmetrix-sim {
+        right: 14%;
+        width: 30%;
+        border: 0.3vw solid $important-text-color;
+        filter: drop-shadow(0.4vw 0.4vw 0.4vw grey);
+    }
+
+    #revmetrix-caption {
+        right: 23.5%;
+        margin-top: 31%;
+        font-size: 1vw;
+    }
 }
