--- a/src/_styles/projects.scss
+++ b/src/_styles/projects.scss
@@ -105,7 +105,7 @@
   }
 
   .card-inner {
-    height: 130%;
+    height: 132%;
     outline: 0.35vw solid $important-text-color;
     box-shadow: 0.4vw 0.4vw 0.4vw grey;
   }
@@ -131,11 +131,11 @@
 @media (max-width: 800px) {
   .card {
     flex: 0 0 40%;
-    margin-bottom: 27%;
+    margin-bottom: 29%;
   }
 
   .card-inner {
-    height: 200%;
+    height: 205%;
     outline: 0.4vw solid $important-text-color;
     box-shadow: 0.6vw 0.6vw 0.6vw grey;
   }
